<resources>
    <string name="app_name">iCanteen Food Menu</string>
    <string name="about_app">About this app</string>


    <!-- MainActivity -->
    <string name="add_canteen">Add canteen</string>
    <string name="set_as_favorite">Set canteen as favorite</string>
    <string name="canteen_was_set_as_favorite">Canteen named %s will be shown automatically after starting the app.</string>
    <string name="no_canteens_added">No canteens have been added so far.</string>

    <string name="remove_canteen_dialog_title">Delete canteen?</string>
    <string name="remove_canteen_dialog_message">Are you sure you want to remove the canteen named %s?</string>

    <string name="add_canteen_dialog_title">Add canteen</string>
    <string name="add_canteen_dialog_select">Choose a canteen from the list</string>
    <string name="add_canteen_dialog_name">Name</string>
    <string name="add_canteen_dialog_url">URL address</string>
    <string name="add_canteen_dialog_add">Add</string>
    <string name="add_canteen_dialog_cancel">Cancel</string>
    <string name="add_canteen_dialog_url_help">The URL address field must contain the URL of an iCanteen login page.\nExample: <b>https://strav.nasejidelna.cz/1234/login</b></string>

    <string name="add_canteen_error_dialog_title">Error</string>
    <string name="add_canteen_error_dialog_empty_name">The name field is empty!</string>
    <string name="add_canteen_error_dialog_empty_url">The URL address field is empty!</string>
    <string name="add_canteen_error_dialog_invalid_url">The specified URL address is invalid!</string>
    <string name="add_canteen_error_dialog_extractor_error">An error occurred while fetching the food menu from the canteen\'s website!\nError message: %s</string>

    <string name="select_canteen_dialog_title">Choose a canteen</string>

    <string name="validating_canteen_progress_dialog_message">Validating the canteen…</string>


    <!-- FoodMenuActivity -->
    <string name="refresh_food_menu">Refresh</string>
    <string name="order_dishes">Order dishes</string>

    <string name="fetching_food_menu_progress_dialog_message">Fetching the food menu…</string>
    <string name="food_menu_fetch_error_dialog_title">Error</string>
    <string name="food_menu_fetch_error_dialog_message">An error occurred while fetching the food menu from the canteen\'s website!\nError message: %s</string>


    <!-- AboutActivity -->
    <string name="app_license">App license</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="version">version %s</string>

    <string name="author">Author: <b>Vít Labuda</b></string>
    <string name="author_links" translatable="false">https://vitlabuda.cz | https://github.com/vitlabuda</string>
    <string name="author_disclaimer">This app is not affiliated with iCanteen or its author, Z-WARE s.r.o. It\'s just a non-profit open-source community project.</string>

    <string name="license">License: <b>BSD-3-Clause</b></string>
    <string name="source_code_links">Source code: https://github.com/vitlabuda/icanteen-jidelnicek</string>

</resources>
