<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="12dp" >

    <Button
        android:id="@+id/dialog_add_canteen_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_canteen_dialog_select"
        android:layout_marginBottom="24dp"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_canteen_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_canteen_dialog_name"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_canteen_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_canteen_dialog_url"
            android:inputType="textUri"
            android:singleLine="true"
            android:text="https://strav.nasejidelna.cz//login" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_canteen_dialog_url_help" />

</LinearLayout>